--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,8 @@
 include Makefile
 include *.txt
 include *.py
-graft cmaprsrc
-graft docs
+prune cmaprsrc
+prune docs
 graft pdfminer
-graft samples
+prune samples
 graft tools
