--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py26,py27,py34,py35,py36
 [testenv]
 commands = nosetests --nologcapture
 deps =
-	pycryptodome
+	cryptography
 	chardet
 	nose
 	sortedcontainers
