--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
 - '2.7'
 install:
-- pip install pycrypto
+- pip install cryptography
 script:
 - make test
 - make sdist bdist
