--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ python:
   - "3.7"
 install:
   - pip install -e .
+  - pip install pytest
 script:
-  nosetests --nologcapture
+  - make test
+  - make sdist
