--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 envlist = py36,py37
 
 [testenv]
-commands = nosetests --nologcapture
+commands = pytest tests/
 deps =
 	cryptography
 	chardet
-	nose
+	pytest
 	sortedcontainers
